added show passwort function

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -18,17 +18,24 @@
         </div>
         <div class="login-form">
           <form [formGroup]="form" (ngSubmit)="onSubmit()">
-            <input class="mail-icon" type="email" placeholder="Email" formControlName="email"
-              [class.error-border]="form.get('email')?.invalid && (form.get('email')?.dirty || form.get('email')?.touched)">
-            <input class="lock-icon" [type]="showPassword ? 'text' : 'password'" placeholder="Password"
-              formControlName="password" [class.error-border]="form.get('password')?.invalid && (form.get('password')?.dirty || form.get('password')?.touched)">
-
-            <span (click)="showPassword = !showPassword" class="toggle-password"> {{ showPassword ? 'hide-Pw' : 'show-Pw' }} </span>
-
-            <div class="error-text">
-              <p>{{errorMessage}}</p>
+            <!-- Email-Feld -->
+            <div class="input-wrapper">
+              <input class="mail-icon" type="email" placeholder="Email" formControlName="email"
+                [class.error-border]="form.get('email')?.invalid && (form.get('email')?.dirty || form.get('email')?.touched)">
             </div>
-
+            <!-- Passwort-Feld mit Bild-Logik -->
+            <div class="input-wrapper">
+              <input #pwInput class="lock-icon" [type]="showPassword ? 'text' : 'password'" placeholder="Password"
+                formControlName="password" (focus)="isFocused = true" (blur)="isFocused = false"
+                (input)="checkPasswordInput()"
+                [class.error-border]="form.get('password')?.invalid && (form.get('password')?.dirty || form.get('password')?.touched)">
+              <img [src]="lockIconSrc" alt="Lock Icon" class="lock-image" (click)="checkLockClick(pwInput)">
+            </div>
+            <!-- Fehlertext -->
+            <div class="error-text">
+              <p>{{ errorMessage }}</p>
+            </div>
+            <!-- Buttons -->
             <div class="form-btn">
               <button type="submit" class="login-button">Login</button>
               <button (click)="guestLogIn()" class="guest-button" routerLink="/">Guest Log in</button>
