--- a/src/app/signup-overlay/signup-overlay.component.scss
+++ b/src/app/signup-overlay/signup-overlay.component.scss
@@ -20,7 +20,7 @@ section{
         width: 100%;
         .signup-container{
             border-radius: 15px;
-            height: 50em;
+            height: 52em;
             width: clamp(31em, 85vw , 55em);
             background-color: #ffffff;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -109,10 +109,11 @@ section{
                 padding-top: 2em;
                 .custom-checkbox{
                     display: flex;
+                    align-items: center;
                     justify-content: center;
                     gap: 0.4em;
                     font-size: 16px;
-                    width: 80%;
+                    width: 110%;
                     margin-bottom: 2em;
                 }
                 button{
