Make 'Log In' button navigable and update styles
Added [routerLink] to the 'Log In' button in both legal notice and privacy sign-in components to enable navigation to the login page. Also updated SCSS to show pointer cursor on hover for better UX.

--- a/src/app/shared/legal-notice-sign-in/legal-notice-sign-in.component.html
+++ b/src/app/shared/legal-notice-sign-in/legal-notice-sign-in.component.html
@@ -3,7 +3,7 @@
         <div class="nav-desktop">
             <div class="logo-login">
                 <img src="assets/img/navbar/Join logo vector.png" alt="">
-                <div class="log-in">
+                <div [routerLink]="'/login'" class="log-in">
                     <img src="assets/img/sign-up/login.svg" alt="">
                     <span class="span-one">Log In</span>
                 </div>
