--- a/src/app/shared/privacy-sign-in/privacy-sign-in.component.scss
+++ b/src/app/shared/privacy-sign-in/privacy-sign-in.component.scss
@@ -63,6 +63,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            cursor: pointer;
             width: 100%;
             height: 40px;
             gap: 8px;
