help menu buttons, active highlight footer, router fixes
fixed visibility of help menu buttons, fixed improved highlight active function of nav footer menu, changed router links and added redirection of empty path

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -4,14 +4,14 @@
         <header>
         <div class="kanban"></div>
         <div class="menu">
-            <a routerLink="/help"><div class="help"></div></a>
+            <a id="help-button-header" (click)="toggleHelp()"><div class="help help-button-header"></div></a>
             <span id="user" (click)="toggleDropDown()">{{initialsUser}}</span>
         </div>
         </header>
         <div id="drop-down" class="hidden">
-            <a routerLink="/help"><p id="help">Help</p></a>
-            <a routerLink="/legalNotice"><p>Legal Notice</p></a>
-            <a routerLink="/privacy"><p>Privacy</p></a>
+            <a (click)="toggleHelp()"><p id="help" class="help-button-dropdown">Help</p></a>
+            <a (click)="closeHelp()" routerLink="/legalNotice"><p>Legal Notice</p></a>
+            <a (click)="closeHelp()" routerLink="/privacy"><p>Privacy</p></a>
             <p (click)="logOut()">Log out</p>
         </div>
     </div>
