--- a/src/app/shared/nav-footer/nav-footer.component.html
+++ b/src/app/shared/nav-footer/nav-footer.component.html
@@ -5,15 +5,15 @@
     </div>
     <nav>
         <ul>
-            <a class="summary" (click)="toggleActive('summary')" routerLink="/summary"><li><img src="assets/img/navbar/Summary.png" alt="">Summary</li></a>
-            <a class="task" (click)="toggleActive('task')" routerLink="/task"><li><img src="assets/img/navbar/Add task.png" alt="">Add Task</li></a>
-            <a class="board" (click)="toggleActive('board')" routerLink="/board"><li><img src="assets/img/navbar/Board.png" alt="">Board</li></a>
-            <a class="contacts" (click)="toggleActive('contacts')" routerLink="/contacts"><li><img src="assets/img/navbar/Contacts.png" alt="">Contacts</li></a>
+            <a class="summary active" (click)="toggleActive('summary'); closeHelp()" routerLink="/summary"><li><img src="assets/img/navbar/Summary.png" alt="">Summary</li></a>
+            <a class="task" (click)="toggleActive('task');closeHelp()" routerLink="/task"><li><img src="assets/img/navbar/Add task.png" alt="">Add Task</li></a>
+            <a class="board" (click)="toggleActive('board');closeHelp()" routerLink="/board"><li><img src="assets/img/navbar/Board.png" alt="">Board</li></a>
+            <a class="contacts" (click)="toggleActive('contacts');closeHelp()" routerLink="/contacts"><li><img src="assets/img/navbar/Contacts.png" alt="">Contacts</li></a>
         </ul>
     </nav>
     </div>
     <footer>
-        <a (click)="toggleActive('')" routerLink="/privacy">Privacy Policy</a>
-        <a (click)="toggleActive('')" routerLink="/legalNotice">Legal notice</a>
+        <a (click)="toggleActive('privacy');" routerLink="/privacy">Privacy Policy</a>
+        <a (click)="toggleActive('legalNotice');" routerLink="/legalNotice">Legal notice</a>
     </footer>
 </section>
