--- a/src/app/kanban/kanban-add/kanban-add.component.scss
+++ b/src/app/kanban/kanban-add/kanban-add.component.scss
@@ -15,6 +15,7 @@
         section {
             font-size: 10px;
             max-width: (1920px - 230px);
+            overflow-y: scroll;
 
             .content {
                 display: flex;
@@ -23,10 +24,11 @@
 
                 @media (max-width: 965px) {
                     height: 84dvh;
+                    flex-direction: column;
                 }
 
                 @media (max-width: 750px) {
-                    flex-direction: column;
+                    
                 }
 
                 .left-addtask {
@@ -37,7 +39,7 @@
                     align-items: center;
                     padding-top: 2em;
 
-                    @media (max-width: 750px) {
+                    @media (max-width: 965px) {
                         width: 100%;
                     }
 
@@ -72,7 +74,7 @@
                                 height: 100%;
                                 padding-top: 8dvh;
 
-                                @media (max-width: 750px) {
+                                @media (max-width: 965px) {
                                     padding-top: 4dvh;
                                 }
 
@@ -91,7 +93,7 @@
                                     flex-direction: column;
                                     justify-content: center;
 
-                                    @media (max-width: 750px) {
+                                    @media (max-width: 965px) {
                                         height: 22dvh;
                                     }
                                 }
@@ -102,7 +104,7 @@
                                     min-height: 64px;
                                     margin-bottom: 3em;
 
-                                    @media (max-width: 750px) {
+                                    @media (max-width: 965px) {
                                         min-height: 24px;
                                         margin-bottom: 2em;
                                     }
@@ -125,14 +127,14 @@
                                         min-height: 64px;
                                         height: 16dvh;
 
-                                        @media (max-width: 750px) {
+                                        @media (max-width: 965px) {
                                             display: none;
                                             z-index: -1;
                                         }
                                     }
 
                                     .span-description {
-                                        @media (max-width: 750px) {
+                                        @media (max-width: 965px) {
                                             display: none;
                                             z-index: -1;
                                         }
@@ -157,7 +159,7 @@
                                     margin-bottom: 4dvh;
                                 }
 
-                                @media (max-width: 750px) {
+                                @media (max-width: 965px) {
                                     display: none;
                                 }
                             }
@@ -179,7 +181,7 @@
                         background-color: rgba(0, 0, 0, 0.049);
                         margin: 0px 2px;
 
-                        @media (max-width: 750px) {
+                        @media (max-width: 965px) {
                             display: none;
                         }
                     }
@@ -193,7 +195,7 @@
                     justify-content: center;
                     align-items: center;
 
-                    @media (max-width: 750px) {
+                    @media (max-width: 965px) {
                         width: 100%;
                         margin-top: 0em;
                     }
@@ -218,7 +220,7 @@
                                 font-size: 1.6em;
                                 margin-bottom: 1em;
 
-                                @media (max-width: 750px) {
+                                @media (max-width: 965px) {
                                     margin-top: 1.5em;
                                     margin-bottom: 0.2em;
                                 }
@@ -254,8 +256,16 @@
                                     font-size: 2em;
                                     padding: 0.5em 1em;
                                     transition: box-shadow 0.3s ease;
-
-                                    @media (max-width: 390px) {
+                                    @media (max-width: 1270px) {
+                                        font-size: 16px;
+                                    }
+                                    @media (max-width: 1060px) {
+                                        font-size: 14px;
+                                    }
+                                    @media (max-width: 965px) {
+                                        font-size: 21px;
+                                    }
+                                    @media (max-width: 500px) {
                                         font-size: 0px;
                                         height: 44px;
                                         width: 60px;
@@ -295,7 +305,7 @@
                                 display: none;
                                 font-size: 1.6em;
 
-                                @media (max-width: 750px) {
+                                @media (max-width: 965px) {
                                     display: flex;
                                     margin-top: 3em;
                                     margin-bottom: 2em;
@@ -471,7 +481,7 @@
                             margin-top: 4em;
                             width: 100%;
 
-                            @media (max-width: 750px) {
+                            @media (max-width: 965px) {
                                 margin-top: 1em;
                             }
 
@@ -481,7 +491,7 @@
                                 gap: 1.5em;
                                 width: 100%;
 
-                                @media (max-width: 750px) {
+                                @media (max-width: 965px) {
                                     margin-bottom: 1em;
                                 }
 
@@ -518,6 +528,9 @@
                                     font-size: 1.8em;
                                     padding: 10px 18px;
                                     transition: box-shadow 0.3s ease;
+                                    @media(max-width: 330px){
+                                        font-size: 1.6em;
+                                    }
 
                                     img {
                                         margin-left: 0.5em;
