--- a/src/app/summary/summary-content/summary-content.component.html
+++ b/src/app/summary/summary-content/summary-content.component.html
@@ -1,6 +1,6 @@
 @defer (when !loading()) {
-<section>
-  <div class="main-input">
+<section >
+  <div class="main-input" >
     <div class="headline-area-summary">
       <h1>Join 360</h1>
       <div class="hyphen"></div>
@@ -13,7 +13,7 @@
       <div class="hyphen-mobile"></div>
     </div>
 
-    <div class="menu-summary">
+    <div class="menu-summary" [routerLink]="'/board'">
 
       <div class="to-do-done">
         <div class="menu-point">
