added logic for unique mail and create contact on sign up

--- a/src/app/contacts/overlay-contacts/overlay-contacts.component.html
+++ b/src/app/contacts/overlay-contacts/overlay-contacts.component.html
@@ -117,7 +117,7 @@
                 <img src="assets/img/add-contacts/Vector.svg" />
               </button>
               <button class="create" [disabled]="!contactForm.valid"
-                (click)=" splitFullName(); overlayState.addContacts(contactList);  overlayState.contactConfirmation(); resetNewContactInput(); toggleOverlay(); contactForm.resetForm();">
+                (click)=" splitFullName(); checkAndAdd(contactList);  overlayState.contactConfirmation(); resetNewContactInput(); toggleOverlay(); contactForm.resetForm();">
                 Create contact
                 <img src="assets/img/add-contacts/check.svg" />
               </button>
