--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -32,13 +32,19 @@
               <img [src]="lockIconSrc" alt="Lock Icon" class="lock-image" (click)="checkLockClick(pwInput)">
             </div>
             <!-- Fehlertext -->
+
             <div class="error-text">
               <p>{{ errorMessage }}</p>
+
+              @if (this.form.invalid && this.form.touched) {
+              <p>Check your email and password. Please try again.</p>
+              }
+
             </div>
             <!-- Buttons -->
             <div class="form-btn">
               <button type="submit" class="login-button">Login</button>
-              <button (click)="guestLogIn()" class="guest-button" routerLink="/">Guest Log in</button>
+              <button (click)="guestLogIn()" type="button" class="guest-button" routerLink="/">Guest Log in</button>
             </div>
           </form>
         </div>
