added mobile bluescreen animation

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,7 @@
 <section>
   <div class="content">
+     <div class="bluescreen">
+  </div>
     <div class="background-content">
       <div class="logo-wrapper slide">
         <img id="animated-logo" class="logo" src="assets/img/header/Logo.png" alt="Logo Join">
