--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -5,6 +5,33 @@ section {
     font-size: 10px;
     user-select: none;
 
+    .bluescreen {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #2a3647;
+        z-index: 1000;
+        display: none;
+        animation: fadeOut 0.5s ease-out 0.5s forwards;
+
+        @media (max-width: 750px) {
+            display: block;
+        }
+    }
+
+    /* Animation für das Ausblenden */
+    @keyframes fadeOut {
+        from {
+            opacity: 1;
+        }
+        to {
+            opacity: 0;
+            visibility: hidden;
+        }
+    }
+
     .content {
         display: flex;
         flex-direction: column;
@@ -20,6 +47,8 @@ section {
             justify-content: space-between;
             align-items: center;
             width: 100%;
+
+           
 
             .logo-wrapper {
                 z-index: 200;
@@ -48,7 +77,7 @@ section {
 
             .logo {
                 @media (max-width: 750px) {
-                    width: 4.5em;
+                    width: 3.5em;
                 }
             }
 
@@ -159,7 +188,6 @@ section {
                         border: 2px solid rgba(0, 0, 0, 0.214);
                     }
 
-                  
                     .input-wrapper {
                         display: flex;
                         justify-content: center;
@@ -167,6 +195,12 @@ section {
                         position: relative;
                         margin-bottom: 1rem;
                         width: 100%;
+                    }
+
+                    .mail-icon {
+                        background-image: url("./../../../public/assets/img/login/mail.svg");
+                        background-repeat: no-repeat;
+                        background-position: right 8px center;
                     }
 
                     .lock-image {
